resources/cloudformation-SecurityGroups-VPC-CORE-ANCILLIARY.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "AWS CloudFormation template to deploy the base security groups",
  "Parameters": {
    "VpcId": {
      "Type": "AWS::EC2::VPC::Id",
      "Description": "VpcId of your existing Virtual Private Cloud (VPC)"
    },
    "VPCOctet": {
      "Description": "First two octets of the VPC",
      "Type": "String",
      "MinLength": "4",
      "MaxLength": "7",
      "AllowedPattern": "[0-9]{2,3}.[0-9]{1,3}",
      "ConstraintDescription": "must only be the first two octets without a trailing period"
    },
    "Customer": {
      "Description": "The Customer tag to allocate costs to",
      "Type": "String"
    },
    "Name": {
      "Description": "The Name tag to allocate costs to",
      "Type": "String",
      "MinLength": "3",
      "MaxLength": "255"
    }
  },
  "Mappings": {
    "SubnetConfig": {
      "VPC": {
        "CIDR": "0.0/16"
      },
      "AdminA": {
        "CIDR": "254.0/25"
      },
      "AdminB": {
        "CIDR": "254.128/25"
      },
      "AdminC": {
        "CIDR": "255.0/25"
      },
      "WebA": {
        "CIDR": "3.0/24"
      },
      "WebB": {
        "CIDR": "4.0/24"
      },
      "WebC": {
        "CIDR": "5.0/24"
      },
      "SecurityA": {
        "CIDR": "21.0/24"
      },
      "SecurityB": {
        "CIDR": "22.0/24"
      },
      "SecurityC": {
        "CIDR": "23.0/24"
      },
      "DataA": {
        "CIDR": "12.0/24"
      },
      "DataB": {
        "CIDR": "13.0/24"
      },
      "DataC": {
        "CIDR": "14.0/24"
      }
    },
    "AvailabilityZones": {
      "ap-southeast-2": {
        "ZoneA": "ap-southeast-2a",
        "ZoneB": "ap-southeast-2b",
        "ZoneC": "ap-southeast-2c"
      },
      "eu-west-1": {
        "ZoneA": "eu-west-1a",
        "ZoneB": "eu-west-1b"
      }
    }
  },
  "Resources": {
    "sgAdmin": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Admin Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Admin-Security-Group"
          },
          {
            "Key": "Customer",
            "Value": {
              "Ref": "Customer"
            }
          }
        ]
      }
    },
    "sgTrendELB": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Trend ELB Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Trend-ELB-SG"
          },
          {
            "Key": "Customer",
            "Value": {
              "Ref": "Customer"
            }
          }
        ]
      }
    },
    "sgTrendManager": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Trend Manager Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Trend-Manager-SG"
          },
          {
            "Key": "Customer",
            "Value": {
              "Ref": "Customer"
            }
          }
        ]
      }
    },
    "sgTrendAgent": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Trend Agent Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Trend-Agent-SG"
          },
          {
            "Key": "Customer",
            "Value": {
              "Ref": "Customer"
            }
          }
        ]
      }
    },
    "sgData": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Data Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Data-SG"
          },
          {
            "Key": "Customer",
            "Value": {
              "Ref": "Customer"
            }
          }
        ]
      }
    },
    "sgWeb": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Web Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Web-SG"
          },
          {
            "Key": "Customer",
            "Value": {
              "Ref": "Customer"
            }
          }
        ]
      }
    },
    "sgAdminEgressVPCRDP": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgAdmin",
      "Properties": {
        "GroupId": {
          "Ref": "sgAdmin"
        },
        "IpProtocol": "tcp",
        "FromPort": "3389",
        "ToPort": "3389",
        "CidrIp": {
          "Fn::Join": [
            ".",
            [
              {
                "Ref": "VPCOctet"
              },
              {
                "Fn::FindInMap": [
                  "SubnetConfig",
                  "VPC",
                  "CIDR"
                ]
              }
            ]
          ]
        }
      }
    },
    "sgAdminEgressVPCSSH": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgAdmin",
      "Properties": {
        "GroupId": {
          "Ref": "sgAdmin"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": {
          "Fn::Join": [
            ".",
            [
              {
                "Ref": "VPCOctet"
              },
              {
                "Fn::FindInMap": [
                  "SubnetConfig",
                  "VPC",
                  "CIDR"
                ]
              }
            ]
          ]
        }
      }
    },
    "sgAdminEgressHTTPS": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgAdmin",
      "Properties": {
        "GroupId": {
          "Ref": "sgAdmin"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgAdminEgressHTTP": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgAdmin",
      "Properties": {
        "GroupId": {
          "Ref": "sgAdmin"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgAdminEgressSMTP587": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgAdmin",
      "Properties": {
        "GroupId": {
          "Ref": "sgAdmin"
        },
        "IpProtocol": "tcp",
        "FromPort": "587",
        "ToPort": "587",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgTrendELBIngressAllHTTPS": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgTrendELB",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendELB"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgTrendELBEgressTrendManagerHTTPS": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgTrendELB",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendELB"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "DestinationSecurityGroupId": {
          "Ref": "sgTrendManager"
        }
      }
    },
    "sgTrendELBEgressTrendManager4119": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgTrendELB",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendELB"
        },
        "IpProtocol": "tcp",
        "FromPort": "4119",
        "ToPort": "4119",
        "DestinationSecurityGroupId": {
          "Ref": "sgTrendManager"
        }
      }
    },
    "sgTrendManagerIngressTrendELBHTTPS": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgTrendManager",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendManager"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "SourceSecurityGroupId": {
          "Ref": "sgTrendELB"
        }
      }
    },
    "sgTrendManagerIngressTrendPorts": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgTrendManager",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendManager"
        },
        "IpProtocol": "tcp",
        "FromPort": "4118",
        "ToPort": "4122",
        "CidrIp":"0.0.0.0/0"
      }
    },
    "sgTrendManagerIngressTrendManager": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgTrendManager",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendManager"
        },
        "IpProtocol": "tcp",
        "FromPort": "4118",
        "ToPort": "4122",
        "SourceSecurityGroupId": {
          "Ref": "sgTrendManager"
        }
      }
    },
    "sgTrendManagerIngressTrendAgent": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgTrendManager",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendManager"
        },
        "IpProtocol": "tcp",
        "FromPort": "4118",
        "ToPort": "4122",
        "SourceSecurityGroupId": {
          "Ref": "sgTrendAgent"
        }
      }
    },
    "sgTrendManagerIngressAdminRDP": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgTrendManager",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendManager"
        },
        "IpProtocol": "tcp",
        "FromPort": "3389",
        "ToPort": "3389",
        "SourceSecurityGroupId": {
          "Ref": "sgAdmin"
        }
      }
    },
    "sgTrendManagerEgressTrendAgent": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgTrendManager",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendManager"
        },
        "IpProtocol": "tcp",
        "FromPort": "4118",
        "ToPort": "4122",
        "DestinationSecurityGroupId": {
          "Ref": "sgTrendAgent"
        }
      }
    },
    "sgTrendManagerEgressHTTP": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgTrendManager",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendManager"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgTrendManagerEgressHTTPS": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgTrendManager",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendManager"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgTrendManagerEgressMail": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgTrendManager",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendManager"
        },
        "IpProtocol": "tcp",
        "FromPort": "587",
        "ToPort": "587",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgTrendManagerEgressSQL": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgTrendManager",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendManager"
        },
        "IpProtocol": "tcp",
        "FromPort": "1433",
        "ToPort": "1433",
        "DestinationSecurityGroupId": {
          "Ref": "sgData"
        }
      }
    },

    "sgTrendAgentIngressTrendManager": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgTrendAgent",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendAgent"
        },
        "IpProtocol": "tcp",
        "FromPort": "4118",
        "ToPort": "4122",
        "SourceSecurityGroupId": {
          "Ref": "sgTrendManager"
        }
      }
    },
    "sgTrendAgentEgressTrendManager": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgTrendAgent",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendAgent"
        },
        "IpProtocol": "tcp",
        "FromPort": "4118",
        "ToPort": "4122",
        "DestinationSecurityGroupId": {
          "Ref": "sgTrendManager"
        }
      }
    },
    "sgTrendAgentEgressHTTP": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgTrendAgent",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendAgent"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgTrendAgentEgressHTTPS": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgTrendAgent",
      "Properties": {
        "GroupId": {
          "Ref": "sgTrendAgent"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgDataIngresssgAdminRDP": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgData",
      "Properties": {
        "GroupId": {
          "Ref": "sgData"
        },
        "IpProtocol": "tcp",
        "FromPort": "3389",
        "ToPort": "3389",
        "SourceSecurityGroupId": {
          "Ref": "sgAdmin"
        }
      }
    },
    "sgDataIngresssgAdminSSH": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgData",
      "Properties": {
        "GroupId": {
          "Ref": "sgData"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "SourceSecurityGroupId": {
          "Ref": "sgAdmin"
        }
      }
    },
    "sgDataIngresssgTrendManagerSQL": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgData",
      "Properties": {
        "GroupId": {
          "Ref": "sgData"
        },
        "IpProtocol": "tcp",
        "FromPort": "1433",
        "ToPort": "1433",
        "SourceSecurityGroupId": {
          "Ref": "sgTrendManager"
        }
      }
    },
    "sgDataEgressHTTP": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgData",
      "Properties": {
        "GroupId": {
          "Ref": "sgData"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgDataEgressHTTPS": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgData",
      "Properties": {
        "GroupId": {
          "Ref": "sgData"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgDataEgressSMTP587": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "DependsOn": "sgData",
      "Properties": {
        "GroupId": {
          "Ref": "sgData"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Outputs": {
    "AdminSecurityGroup": {
      "Value": {
        "Ref": "sgAdmin"
      },
      "Description": "Admin Security Group Id"
    },
    "TrendELBSecurityGroup": {
      "Value": {
        "Ref": "sgTrendELB"
      },
      "Description": "Trend ELB Security Group Id"
    },
    "TrendManagerSecurityGroup": {
      "Value": {
        "Ref": "sgTrendManager"
      },
      "Description": "Trend Manager Security Group Id"
    },
    "TrendAgentSecurityGroup": {
      "Value": {
        "Ref": "sgTrendAgent"
      },
      "Description": "Trend Agent Security Group Id"
    },
    "DataSecurityGroup": {
      "Value": {
        "Ref": "sgData"
      },
      "Description": "Database Security Group Id"
    },
    "VpcId": {
      "Value": {
        "Ref": "VpcId"
      },
      "Description": "ID of the VPC the SG are attached to"
    }
  }
}
